Add test cases and some largely redundant messy test class
Better safe than sorry! Don't wanna miss any edge cases right

Closes #14